--- a/index.html
+++ b/index.html
@@ -5,17 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style/ping.css">
 </head>
 <body>
-    <svg width="100" height="100">
-        <circle cx="50" cy="50" r="50"  fill="yellow"/>
-    </svg>
-    <svg width="100" height="100">
-        <rect width="100" height="100" fill:blueviolet/>
-    </svg>
-    <svg width="100" height="100">
-        <polygon points="50,0 0,100 99,99 50,0 0,99" stroke="#FF3399" stroke-width="1" fill="#FF3399" />
-    </svg>
-    <iframe src="https://www.youtube.com/watch?v=3cxrx0ONzZ4" width="500" height="500"></iframe>
+    <nav class="navbar"> <!--link ไปยังส่วนต่างๆ ภายในหน้านั้นๆ -->
+        <h1 class="title">Menu</h1> <!--หัวข้อ menu-->
+        <ul> <!--จุดไข่ปลา-->
+            <li><a class="btn" href="index.html">WEB</a></li> <!--เชื่อมหน้า-->
+            <li><a href="page2.html">หนังสือ</a></li> <!--เชื่อมหน้า-->
+            <li><a href="page3.html">E-book</a></li> <!--เชื่อมหน้า-->
+        </ul>
+    </nav>
+    <h1 class="Niyay">ชอบอ่านหนังสือ "นิยาย"</h1> <!--หัวข้อ-->
+    <div class="img_aon"> <!--กรอบแสดงรูปภาพ-->
+        <center><img class="book" src="img/34127.jpg" alt=""></center> <!--ภาพหนังสือ-->
+    </div>
+    <div class="di_name"> <!--กรอบกำหนดการอ่านนิยายผ่านเว็บ-->
+        <div class="Name"> <!--กรอบหัวข้อ-->
+            <h3 class="Niyay">นิยายที่อ่านกับ WEB</h3> <!--หัวข้อเรื่อยงย่อย-->
+        </div>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <iframe src="https://www.dek-d.com/home/writer/" frameborder="0" width="100%" hiight="100%"></iframe> <!--เว็บนิยาย-->
+        </div>
+        <br> <!--บรรทัดใหม่-->
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/nicedear/story/view.php?id=1517813">แฝดสะท้านภพ</a></h4 > <!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/nicedear/story/view.php?id=1517813">
+            <center><img src="img/1.jpg" alt=""></center>
+            </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>สองพี่น้องฝาแฝดที่ได้รับสมญานามแฝดอัจฉริยะมาเกิดใหม่ในยุคต่างมิติ แถมยังคงเป็นแฝดกันเหมือนเดิม ความทรงจำที่ของโลกเก่ายังคงอยู่ <br> <!--บรรทัดใหม่-->
+             แต่โลกใหม่ที่คำว่า'เหนือฟ้า ยังมีฟ้า'จะทำให้สองพี่น้องต้องเดินไปในทิศทางใด ถึงจะมีชีวิตรอดได้</p> <!--อาภารบท-->
+        </div>
+        <br>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/Akihiko_Yotsuba/story/view.php?id=1685280">แฝดป่วนภพ (เทพมารสะท้านปฐพี)</a></h4 ><!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/Akihiko_Yotsuba/story/view.php?id=1685280">
+            <center><img class="img_01" src="img/25.jpg" alt=""></center>
+            </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>ปาระเบิดเผาบ้านตนเอง เพื่อระบายแค้น ยอมตายใต้กองเพลิง พอลืมตาตื่น ก็หลุดมาโลกจอมยุทธ <br> <!--บรรทัดใหม่-->
+            บ้านเมืองยังไม่เป็นปึกแผ่น กลายเป็นสองพี่น้องสวะ ไร้พลังพิเศษ "พี่ชาย เราไปป่วนยุทธภพกันดีหรือไม่"</p> <!--อาภารบท-->
+        </div>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/ArtLie/story/view.php?id=1742964">ประมุขมารเลี้ยงต้อย</a></h4 ><!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/ArtLie/story/view.php?id=1742964">
+            <center><img class="img_01" src="img/35.jpg" alt=""></center>
+            </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>นี่คือปฐมบทการเลี้ยงต้อยครั้งยิ่งใหญ่แห่งยุทธภพ!...นางเป็นลูกอนุที่ถูกทิ้ง ส่วนเขาเป็นประมุขมารผู้เหี้ยมโหดที่เก็บภรรยาได้กลางป่า <br> <!--บรรทัดใหม่-->
+             "ท่านประมุข ท่านขโมยเด็กบ้านไหนมา" "หุบปาก นี่ภรรยาข้า!"</p> <!--อาภารบท-->
+        </div>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/Nanantata/story/view.php?id=1696653">ไป๋อิง นางมารวังหลัง</a></h4 ><!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/Nanantata/story/view.php?id=1696653">
+            <center><img class="img_01" src="img/5.jpg" alt=""></center>
+        </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>ชะตาชีวิตแสนบัดซบ เล่นตลกอันใดกัน นางไป๋อิง นางมารบูรพาผู้ยิ่งใหญ่ เหตุไฉนต้องกลายมาเป็นสนม แล้วไหนจะท้องแบบงงๆ มารดามันเถอะ!</p> <!--อาภารบท-->
+        </div>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/nunuii24/story/view.php?id=1726640">จางฟางเซียน</a></h4 ><!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/nunuii24/story/view.php?id=1726640">
+            <center><img class="img_01" src="img/7.jpg" alt=""></center>
+        </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>ความรู้จากภพก่อนนำมาประยุกต์ใช้ในภพนี้จะดีแค่ไหนหากแบรนด์สินค้าของนางได้ส่งออกไปต่างแคว้น ทั้งตั๋วเงิน ทั้งเหรียญตำลึงทอง อาาา..แค่คิดก็มีความสุขแล้ว</p> <!--อาภารบท-->
+        </div>
+        <div class="di_name"> <!--กรอบเว็บนิยาย-->
+            <h4 class="Ni"><a href="https://writer.dek-d.com/benny285/story/view.php?id=1541149">เล่ห์รัก ท่านอ๋อง</a></h4 ><!--ชื่อนิยาย + ลิ้งเว็บ-->
+            <a href="https://writer.dek-d.com/benny285/story/view.php?id=1541149">
+            <center><img class="img_01" src="img/8.jpg" alt=""></center>
+            </a> <!--ภาพ + ลิ้งเว็บ-->
+            <p>"ข้าเหมือนนางแล้วเช่นไร??ข้ามิใช่นางเสียหน่อย อย่าได้เห็นข้าเป็นตัวแทนนางเชียว" เขากลับหันมามองนางเลิกคิ้วสูงยกยิ้มเจ้าเล่ห์มีเสน่ห์เหลือร้าย <br> <!--บรรทัดใหม่-->
+             ดวงตาคมมีประกายจนนางขนลุก บอกได้คำเดียว'หายนะ'กำลังมาเยือน</p> <!--อาภารบท-->
+        </div>
+        <a href="page2.html"> <!--ลิ้งกับหน้าที่2-->
+            <article> <!--ความหมายของ Publisher-->
+                <div class="bk_img1"> <!--กรอบกำหนดหน้าลิ้งต่่อไป-->
+                    <h1>หนังสือ</h1> <!--คำอธิบายของกรอบ-->
+                </div>
+                <div class="bk_img"> <!--กรอบโชว์รูป css-->
+                    <img src="img/34127.jpg" alt="Book" width="20%" height="20%">
+                </div>
+            </article>
+            </a>
+            <a href="page3.html"> <!--ลิ้งกับหน้าที่2-->
+            <article> <!--ความหมายของ Publisher-->
+                <div class="bk_img1"> <!--กรอบกำหนดหน้าลิ้งต่่อไป-->
+                    <h1>E-book</h1> <!--คำอธิบายของกรอบ-->
+                </div>
+                <div class="bk_img"> <!--กรอบโชว์รูป css-->
+                    <img src="img/34127.jpg" alt="Book" width="20%" height="20%">
+                </div>
+            </article>
+            </a>
+    </div>
+    <footer> <!--ข้อมูลเพิ่มเติมหรือข้อมูลติดต่อ-->
+        <h3>จัดทำโดย น.ส.ฐิติมา มิตรตะขบ รหัสนักศึกษา 59180011 คณะ IT</h3>
+    </footer>
 </body>
 </html>
